# wtf-transcript-converter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  bandit-report.json  main.py  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.vcon-repo/: graph.json
docs/: api_reference.rst  changelog.rst  conf.py  contributing.rst  cross_provider_testing.rst  examples.rst  index.rst  installation.rst  providers.rst  quickstart.rst  requirements.txt  user_guide.rst
docs/_static/: custom.css
src/wtf_transcript_converter/: __init__.py  exceptions.py
src/wtf_transcript_converter/cli/: __init__.py  cross_provider.py  main.py
src/wtf_transcript_converter/core/: __init__.py  converter.py  models.py  validator.py
src/wtf_transcript_converter/cross_provider/: __init__.py  consistency.py  performance.py  quality.py
src/wtf_transcript_converter/providers/: __init__.py  assemblyai.py  base.py  canary.py  deepgram.py  parakeet.py  rev_ai.py  whisper.py
src/wtf_transcript_converter/utils/: __init__.py  confidence_utils.py  language_utils.py  time_utils.py
tests/: INTEGRATION_TESTS.md  __init__.py  conftest.py  conftest_integration.py  test_basic.py  test_exceptions.py  test_integration.py  test_real_api_integration.py
tests/fixtures/: assemblyai_sample.json  assemblyai_sample.wtf.json  canary_sample.json  canary_sample.wtf.json  canary_sample_back.json  deepgram_sample.json  deepgram_sample.wtf.json  invalid.json  parakeet_sample.json  parakeet_sample.wtf.json  rev_ai_sample.json  rev_ai_sample.wtf.json  rev_ai_sample_roundtrip.json  whisper_sample.json  whisper_sample.wtf.json  wtf_sample.json
tests/test_cli/: __init__.py  test_cross_provider.py  test_main.py
tests/test_cross_provider/: __init__.py  test_consistency.py  test_consistency_integration.py  test_performance.py  test_performance_integration.py  test_quality.py  test_quality_integration.py
tests/test_integration/: test_huggingface_integration.py
tests/test_providers/: __init__.py  test_assemblyai.py  test_canary.py  test_deepgram.py  test_parakeet.py  test_rev_ai.py  test_whisper.py
tests/test_utils/: test_confidence_utils.py  test_time_utils.py
